--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ Title: GXGLoveYoimiya’s Blog
 SEOTitle: GXGLoveYoimiya’s Blog
 Header-img: img/home-bg.jpg
 Email: GXGLoveYoimiya@outlook.com
-Description: “Yes,as you see,This is GXGLoveYoimiya’s Blog! Welcome!”
+Description: “Yes,as you see,this is GXGLoveYoimiya’s Blog! Welcome!”
 Keyword: “Yoimiya,GXG, GXGLoveYoimiya, Genshin Impact,Honkai: StarRail, Minecraft”
 url: GXGLoveYoimiya.github.io# your host, for absolute URL
 baseurl: “” # for example, ‘/blog’ if your blog hosted on ‘host/blog’
